<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010203"

    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".Articles">

    //
    //FI//TN//ESS//
    - //Random workout
    -plank it up
    -8 Quick resistance
    - the best workouts at home
    -   your30daysfitnessplan

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="fill_parent"
                android:layout_height="20dp">
            </View>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-3940256099942544~3347511713">

            </com.google.android.gms.ads.AdView>
            <View
                android:layout_width="fill_parent"
                android:layout_height="20dp">
            </View>

            //TODO
            CHANGE TEXT STYLE//

            <TextView
                android:id="@+id/textView"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:text="Browse"
                android:textColor="#fafafa"
                android:textStyle="bold"
                android:textSize="30dp" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp">
            </View>

            //done
            <Button
                android:id="@+id/fitnessarticle"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/fitnes99"
                android:textColor="#FDFEFE"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/articlefitness" />


            //done
            <Button
                android:id="@+id/yogaarticle"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/yogaiconorginal"
                android:text="@string/articleyoga"
                android:textColor="#FDFEFE"
                android:textSize="25sp"
                android:textStyle="bold" />


            //done
            <Button
                android:id="@+id/walkingarticle"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/walkingicon1"
                android:text="@string/articlewalking"
                android:textColor="#FDFEFE"
                android:textSize="25sp"
                android:textStyle="bold" />

         ///   <Button
                android:id="@+id/dancearticle"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/dance1998" />

            //done
            <Button
                android:id="@+id/runningarticle"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="#FDFEFE"
                android:textSize="25dp"
                android:textStyle="bold"
                android:background="@drawable/runningiconcan19"
                android:text="@string/articlerunning" />



            <Button
                android:id="@+id/medidationarticle"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="#FDFEFE"
                android:textSize="25dp"
                android:textStyle="bold"
                android:background="@drawable/meditation1998"
                android:text="@string/articlemedidation" />
            
            //done
            <Button
                android:id="@+id/sleepacticle"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:textColor="#FDFEFE"
                android:textSize="25dp"
                android:textStyle="bold"
                android:background="@drawable/sleepicon1090"
                android:text="@string/articlesleep" />


            <Button
                android:id="@+id/tipsarticle"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/tipsicon"
                android:textColor="#FDFEFE"
                android:textSize="25dp"
                android:textStyle="bold"
                android:text="@string/articletips" />


            <View
                android:layout_width="fill_parent"
                android:layout_height="20dp">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/homebutton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="0dp"
                    android:background="#808080"
                    android:text="Home"
                    android:textColor="#fafafa"
                    />

                <Button
                    android:id="@+id/browsebutton"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="#808080"

                    android:text="Browse"
                    android:textColor="#fafafa"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="50dp">
                </View>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>