<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#010203"

    android:gravity="center"
    android:orientation="horizontal"
    tools:context=".Articles">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">




                    //TODO
                    CHANGE TEXT STYLE//

                    <Button
                        android:id="@+id/bmicalculator"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Bmi Calculator"/>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="30dp" />

                    <Button
                        android:id="@+id/fitnessarticle"
                        android:layout_width="match_parent"
                        android:layout_height="108dp"
                        android:background="@drawable/fitnes99"
                        android:textColor="#FDFEFE"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:text="@string/articlefitness" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>
                    <Button
                        android:id="@+id/yogaarticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#FDFEFE"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:background="@drawable/yogaiconorginal"
                        android:text="@string/articleyoga" />
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>
                    <Button
                        android:id="@+id/walkingarticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:background="@drawable/walkingicon1"
                        android:textColor="#FDFEFE"
                        android:text="@string/articlewalking" />
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>
                    <Button
                        android:id="@+id/dancearticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/dance1998" />
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>
                    <Button
                        android:id="@+id/runningarticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#FDFEFE"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/runningiconcan19"
                        android:text="@string/articlerunning" />
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>
                    <Button
                        android:id="@+id/nutritionarticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#FDFEFE"
                        android:textSize="25dp"
                        android:background="@drawable/nutrition19919"
                        android:text="@string/articlenutrition" />
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>

                    <Button
                        android:id="@+id/medidationarticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#FDFEFE"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/meditation1998"
                        android:text="@string/articlemedidation" />
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>
                    <Button
                        android:id="@+id/sleepacticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#FDFEFE"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/sleepicon1090"
                        android:text="@string/articlesleep" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>

                    <Button
                        android:id="@+id/musicsoundsarticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:textColor="#FDFEFE"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:background="@drawable/piano1909"
                        android:text="@string/articlemusicsounds" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="25dp"></View>





                    <Button
                        android:id="@+id/tipsarticle"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/tipsicon"
                        android:textColor="#FDFEFE"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:text="@string/articletips" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="30dp"></View>

<!--                    <TextView-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginVertical="25dp"-->
<!--                        android:layout_marginBottom="20dp"-->
<!--                        android:gravity="center"-->
<!--                        android:text="BMI Calculator"-->
<!--                        android:textAlignment="center"-->
<!--                        android:textColor="#000"-->
<!--                        android:textStyle="bold"-->
<!--                        android:textSize="30sp" />-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView4"-->
<!--                        android:layout_width="286dp"-->
<!--                        android:layout_height="29dp"-->
<!--                        android:layout_marginHorizontal="30dp"-->
<!--                        android:gravity="center"-->
<!--                        android:text="Type Your Weight in {Kg}"-->
<!--                        android:textColor="@android:color/black"-->
<!--                        android:textStyle="bold" />-->

<!--                    /TYPE YOUR WEIGHT-->

<!--                    <View-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="10dp">-->

<!--                    </View>-->

<!--                    <EditText-->
<!--                        android:id="@+id/etWeight"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginHorizontal="30dp"-->
<!--                        android:layout_marginVertical="15dp"-->
<!--                        android:background="@drawable/edit_bg"-->
<!--                        android:inputType="numberDecimal"-->
<!--                        android:padding="12dp" />-->

<!--                    //TYPE YOUR HEIGHT-->

<!--                    <TextView-->
<!--                        android:id="@+id/textView5"-->
<!--                        android:layout_width="285dp"-->
<!--                        android:layout_height="31dp"-->
<!--                        android:layout_marginHorizontal="30dp"-->
<!--                        android:gravity="center"-->
<!--                        android:text="Type Your Height in {Cm}"-->
<!--                        android:textColor="@android:color/black"-->
<!--                        android:textStyle="bold" />-->

<!--                    <View-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="10dp">-->

<!--                    </View>-->





<!--                    <EditText-->
<!--                        android:id="@+id/etHeight"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginHorizontal="30dp"-->
<!--                        android:background="@drawable/edit_bg"-->
<!--                        android:inputType="numberDecimal"-->
<!--                        android:padding="12dp" />-->

<!--                    <View-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="30dp">-->
<!--                    </View>-->

<!--                    <Button-->
<!--                        android:id="@+id/btCalculate"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginHorizontal="30dp"-->
<!--                        android:layout_marginVertical="15dp"-->
<!--                        android:background="@drawable/btn_bg"-->
<!--                        android:gravity="center"-->
<!--                        android:text="@string/btCalculate"-->
<!--                        android:textColor="#fafafa" />-->
<!--                    <View-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="30dp">-->
<!--                    </View>-->


<!--                    <ImageView-->
<!--                        android:id="@+id/imageView6"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="111dp"-->
<!--                        android:layout_gravity="center"-->
<!--                        app:srcCompat="@drawable/iconapp" />-->
<!--                    <View-->
<!--                        android:layout_width="fill_parent"-->
<!--                        android:layout_height="30dp">-->
<!--                    </View>-->

                </LinearLayout>

    </ScrollView>

</LinearLayout>
